--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ author:
   github: hiaw
   twitter: hiaw
   email: danielgq.chong@gmail.com
-  disqus: disqus_DRCTnb7oY8
+  disqus: learmeteor
 
 google_analytics: 'UA-70443160-1'
 
