--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,7 @@ author:
   googleplus: https://www.google.com/+MotaquillahMaddane
   github: hiaw
   twitter: hiaw
+  linkedin: danielgqchong
   email: danielgq.chong@gmail.com
   disqus: learmeteor
 
